# pyiceberg-duckdb-polars-local

./: pyproject.toml
iceberg-duckdb-local-aigen/: README.md  TESTING.md  iceberg_duckdb_polars.py  pyproject.toml  test_iceberg_duckdb_polars.py
iceberg-duckdb-polars-local/: README.md  main.py
