[project]
name = "pyiceberg-duckdb-polars-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "numpy>=2.3.2",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pyiceberg>=0.9.1",
    "sqlalchemy>=2.0.42",
]
